Correct elemental projectile behavior